--- a/res/layout/ledlayout.xml
+++ b/res/layout/ledlayout.xml
@@ -4,29 +4,41 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"  >
+    <View
+ android:layout_width="fill_parent"
+ android:layout_height="1dp"
+ android:background="@android:color/darker_gray" />
     <LinearLayout
+        android:id="@+id/namespace"
     android:layout_width="fill_parent"
-    android:layout_height="35dp"
-    android:orientation="horizontal"  >
+    android:layout_height="wrap_content"
+    android:orientation="horizontal" 
+    android:clickable="true" >
 
         
 
  	    <TextView
  	        android:id="@+id/name"
  	        android:layout_width="wrap_content"
- 	        android:layout_height="fill_parent"
+ 	        android:layout_height="wrap_content"
  	        android:gravity="center|left"
- 	        android:textSize="20sp" >
+ 	        android:textSize="20sp"
+ 	         >
     	</TextView>
     	<Button
             android:id="@+id/trigger"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/trigger" />
+
     	</LinearLayout>
+    	 <View
+ android:layout_width="fill_parent"
+ android:layout_height="1dp"
+ android:background="@android:color/darker_gray" />
 	<LinearLayout
     android:layout_width="fill_parent"
-    android:layout_height="25dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"  >	
      <CheckBox
         android:id="@+id/blink"
@@ -34,11 +46,49 @@
         android:layout_height="wrap_content"
         android:text="@string/blink" />
 
+    
      <SeekBar
          android:id="@+id/brightness"
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:layout_weight="1" />
 
+</LinearLayout>
+    <CheckBox
+        android:id="@+id/capture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/capture" />
+<LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"  >
+<!--<TextView
+    android:id="@+id/textView1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/from" />
+ -->
+<SeekBar
+	    android:id="@+id/captureSizeFrom"
+	    android:layout_width="0dip"
+         android:layout_height="wrap_content"
+         android:layout_weight="1" />
+</LinearLayout>
+<LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"  >
+<!-- <TextView
+    android:id="@+id/textView2"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/to"/>
+ -->
+<SeekBar
+	    android:id="@+id/captureSizeTo"
+	    android:layout_width="0dip"
+         android:layout_height="wrap_content"
+         android:layout_weight="1" />
 </LinearLayout>
 </LinearLayout>
